<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Әдебиет</string>
    <string name="app_version">v1.0.0</string>
    <string name="title_activity">Әдебиет</string>
    <string name="splash_app_desc">Android кітап оқу құралы</string>
    <string name="dashboard_open_book">Кітап ашу</string>
    <string name="dashboard_setting">Баптаулар</string>
    <string name="dashboard_help">Көмек</string>
    <string name="dashboard_about">Қосымша туралы</string>
    <string name="dashboard_history">Соңғы кітаптар</string>
    <string name="menu_toc">Мазмұны</string>
    <string name="menu_dashboard">Бас мәзір</string>
    <string name="menu_exit">Шығу</string>
    <string name="html5_video_load">Видео жүктеу</string>
    <string name="title_activity_setting">Қосымша баптаулары</string>
    <string name="action_settings">Settings</string>
    <string name="about_title">Epub форматында кітап оқуға арналған қосымша</string>
    <string name="about_body">
        Негізгі мүмкіндіктері:\n
        - қаріп түрін, түсін, өлшемін, стилін өзгерту;\n
        - фон түсін өзгерту;\n
        - кітапты соңғы оқылған беттен ашу;\n
        - соңғы оқылған кітаптарды көру, ашу.</string>
        <string name="help_title">Epub форматында кітап оқуға арналған қосымша</string>
    <string name="help_body">
        Негізгі нұсқаулар:\n
        - келесі бетке өту үшін дыбыс қаттылығын азайту батырмасын,\n
        - алдынғы бетке өту үшін дыбыс қаттылығын ұлғайту батырмасын басыңыз;\n
        - контекстік менюді шақыру үшін контекстік меню батырмасын басыңыз;\n
        - соңғы оқылған кітаптарды \'Соңғы кітаптар\' терезесінде көре аласыз;\n
        - қосымша баптауларын \'Баптаулар\' терезесінде өзгерте аласыз;\n</string>
    <string name="background_color">Фон түсі</string>
    <string name="font_color">Қаріп түсі</string>
    <string name="font_family">Қаріп түрі</string>
    <string name="select_color">Түс таңдау</string>
    <string name="font_size">Қаріп өлшемі</string>
    <string name="font_bold">Қалың қаріп</string>
    <string name="font_style">Қаріп стилі</string>
    <string name="title_activity_custom_options">CustomOptionsActivity</string>
    <string name="first_page">Бірінші бет</string>
    <string name="last_page">Соңғы бет</string>
    <string name="title_activity_help">Көмек</string>
    <string name="title_activity_about">Қосымша туралы</string>

</resources>