<kz.adebiet.view.DashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1">
    
	<!--  Open Book Button -->
    <Button
        android:id="@+id/btn_open_book"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_openbook"
        android:text="@string/dashboard_open_book">
    </Button>   
    
    <!--  Setting Button -->
    <Button
        android:id="@+id/btn_setting"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_setting"
        android:text="@string/dashboard_setting">
    </Button> 
	
	<!--  Help Button -->
    <Button
        android:id="@+id/btn_help"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_help"
        android:text="@string/dashboard_help">
	</Button>
	
    <!--  About Button -->
    <Button
        android:id="@+id/btn_about"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_about"
        android:text="@string/dashboard_about">
    </Button>
    
    <!--  About Button -->
    <Button
        android:id="@+id/btn_history"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_about"
        android:text="@string/dashboard_history">
    </Button>

</kz.adebiet.view.DashboardLayout>